[project]
name = "openrent-agent"
version = "0.1.0"
description = "AI automation bot for OpenRent"
authors = [
    {name = "BBB"}
]
dependencies = [
    "playwright",
    "python-dotenv",
    "sqlalchemy",
    "asyncpg",
    "fastapi",
    "uvicorn",
    "openai"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
