[project]
name = "openrent-agent"
version = "0.1.0"
description = "AI automation bot for OpenRent"
authors = [
    {name = "BBB"}
]
dependencies = [
    "playwright",
    "python-dotenv",
    "sqlalchemy",
    "asyncpg",
    "Flask",
    "fastapi",
    "uvicorn",
    "openai",
    "pydantic",
    "redis",
    "rq",
    "tzdata",
    "google-api-python-client",
    "google-auth"
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
